# Alkaid-SDVRP

./: .clang-format  .cmake-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  example-config.ini
all/: CMakeLists.txt
cmake/: CPM.cmake  cli11.cmake  json.cmake  mimalloc.cmake  tools.cmake
config/: AlkaidSD.json
data/SET-1/: SD1.txt  SD10.txt  SD11.txt  SD12.txt  SD13.txt  SD14.txt  SD15.txt  SD16.txt  SD17.txt  SD18.txt  SD19.txt  SD2.txt  SD20.txt  SD21.txt  SD3.txt  SD4.txt  SD5.txt  SD6.txt  SD7.txt  SD8.txt  SD9.txt
data/SET-2/: S101D1.sd  S101D2.sd  S101D3.sd  S101D5.sd  S51D1.sd  S51D2.sd  S51D3.sd  S51D4.sd  S51D5.sd  S51D6.sd  S76D1.sd  S76D2.sd  S76D3.sd  S76D4.sd
data/SET-3/: p01_00.cri  p01_1030.cri  p01_1050.cri  p01_1090.cri  p01_110.cri  p01_3070.cri  p01_7090.cri  p02_00.cri  p02_1030.cri  p02_1050.cri  p02_1090.cri  p02_110.cri  p02_3070.cri  p02_7090.cri  p03_00.cri  p03_1030.cri  p03_1050.cri  p03_1090.cri  p03_110.cri  p03_3070.cri  p03_7090.cri  p04_00.cri  p04_1030.cri  p04_1050.cri  p04_1090.cri  p04_110.cri  p04_3070.cri  p04_7090.cri  p05_00.cri  p05_1090.cri  p05_3070.cri  p05_7090.cri  p10_1030.cri  p10_1050.cri  p10_110.cri  p11_00.cri  p11_1030.cri  p11_1050.cri  p11_1090.cri  p11_110.cri  (+2 more)
data/SET-4/: eil22.sd  eil23.sd  eil30.sd  eil33.sd  eil51.sd  eilA101.sd  eilA76.sd  eilB101.sd  eilB76.sd  eilC76.sd  eilD76.sd
docs/: conf.py
documentation/: CMakeLists.txt  Doxyfile
include/alkaidsd/: acceptance_rule.h  config.h  distance_matrix_optimizer.h  instance.h  inter_operator.h  intra_operator.h  problem.h  ruin_method.h  solution.h  solver.h  sorter.h
results/: Results-SDVRP.xlsx
source/: cache.h  construction.cpp  construction.h  delta.h  distance_matrix_optimizer.cpp  repair.cpp  repair.h  route_context.cpp  route_context.h  ruin_method.cpp  solver.cpp  sorter.cpp  split_reinsertion.cpp  split_reinsertion.h  utils.h
source/inter_operator/: base_cache.h  base_star.h  cross.cpp  relocate.cpp  route_head_guard.h  sd_swap_one_one.cpp  sd_swap_star.cpp  sd_swap_two_one.cpp  swap.cpp  swap_star.cpp
source/intra_operator/: exchange.cpp  or_opt.cpp
src/: acceptance_rule.cpp  cache.h  construction.cpp  distance_matrix.cc  distance_matrix.h  logo.h  main.cc  problem.cc  problem.h  random.h  route_context.cpp  ruin_method.cpp  sorter.cpp
src/algorithm/: base_star.h  construction.cc  construction.h  operators.h  ruin_method.cc  ruin_method.h  solver.cc  solver.h  sorter.cc  sorter.h
src/config/: config.cc  config.h
src/inter_operator/: base_cache.h  base_star.h  relocate.cpp  sd_swap_star.cpp  sd_swap_two_one.cpp  swap.cpp
src/model/: direction.h  operator_cache.h  route_context.cc  route_context.h  route_head_guard.h  solution.h
src/sdvrp/: distance_matrix.cc  distance_matrix.h  limit.h  logo.h  problem.cc  problem.h  visualization.cc  visualization.h
src/util/: acceptance_rule.h  delta.h  mcmf.h  (+8 more)
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
(+54 files in other folders)
